# RAG-App

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: cd.yml  ci.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: chat.py  documents.py  ingest.py
backend/app/middleware/: auth.py
backend/app/models/: schemas.py
backend/app/rag/: memory.py  pipeline.py
backend/chroma_db/: chroma.sqlite3
backend/rag_chatbot_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_chat.py  test_health.py  test_ingest.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: ChatWindow.tsx  DocumentsPanel.tsx  SettingsModal.tsx
frontend/src/types/: api.ts  chat.ts
